A1_scenario
It must implement a scenario that follows the compulsory scenario of A1.