@@ -122,7 +122,7 @@ public class Main {
             if (deck.isEmpty()) {
                 reusedDeck();
             }
-            player.addToHand(deck.remove(deck.size() - 1));
+            player.addToHand(deck.removeLast());
         }
     }
     public void reusedDeck() {
@@ -138,13 +138,13 @@ public class Main {
     public void startGame() {
         scanner = new Scanner(System.in);
         output = new PrintWriter(System.out);
-        output.println("Welcome to the game!");
+        System.out.println("Welcome to the game!");
         add_all_players();
         initializeDeck();
         initialize_event_Deck();
         shuffleDeck(deck);
         shuffleDeck(event_deck);
-        output.flush();
+        System.out.flush();
 
     }
     private boolean isInteger(String str) {
@@ -177,8 +177,8 @@ public class Main {
     }
     public void playCard(Scanner scanner, Player player) {
         Displaycard(player, output);
-        output.println("\n Enter the card you want to draw (e.g. S(10)) or position: ");
-        output.flush();
+        System.out.println("\n Enter the card you want to draw (e.g. S(10)) or position: ");
+        System.out.flush();
         String temp = scanner.nextLine();
         if (!temp.isEmpty() && Check_input_card(temp)){
             String suit = temp.substring(0, 1);
@@ -186,35 +186,35 @@ public class Main {
             Card c = player.playedCard(suit,value);
             if (c != null) {
                 playedCards.add(c);
-                output.println("You removed the card ");
-                output.print(" "+ c.getSuit() + "(" + c.getValue() + ")\n");
-                output.flush();
+                System.out.println("You removed the card ");
+                System.out.print(" "+ c.getSuit() + "(" + c.getValue() + ")\n");
+                System.out.flush();
                 return;
-            } else output.print("Please enter the card you have \n");
+            } else System.out.print("Please enter the card you have \n");
         } else if (isInteger(temp)) {
             int position = Integer.parseInt(temp);
             if (position >= 1 && position <= player.getHand().size()) {
                 Card c = player.getHand().get(position - 1);
                 playedCards.add(c);
                 player.getHand().remove(position - 1);
-                output.println("You removed the card: ");
-                output.println(" "+ c.getSuit() + "(" + c.getValue() + ")\n");
-                output.flush();
+                System.out.println("You removed the card: ");
+                System.out.println(" "+ c.getSuit() + "(" + c.getValue() + ")\n");
+                System.out.flush();
                 return;
             } else {
-                output.println("Invalid position. Please enter a valid card position.");
+                System.out.println("Invalid position. Please enter a valid card position.");
             }
             Displaycard(player,output);
         } else {
-            output.print("Please enter according to the format again \n");
+            System.out.print("Please enter according to the format again \n");
         }
 
-        output.flush();
+        System.out.flush();
     }
     public void Displaycard(Player player, PrintWriter output){
         // Display player's hands
         List<Card> temp = new ArrayList<>();
-        temp.add(player.getHand().get(0));
+        temp.add(player.getHand().getFirst());
         for (int i = 1; i < player.getHand().size(); i++) {
             Card newcard = player.getHand().get(i);
             for (int j = 0; j < temp.size(); j++) {
@@ -257,24 +257,25 @@ public class Main {
         output.flush();
     }
     public void Displayplayers(PrintWriter output){
-        for (int i = 0; i < players_Participants.size(); i++) {
-            output.println("P" + players_Participants.get(i).Get_id() + " is eligible ");
+        for (Player playersParticipant : players_Participants) {
+            output.println("P" + playersParticipant.Get_id() + " is eligible ");
         }
+        output.flush();
     }
     public List<Player>  determineWinner( PrintWriter output) {
         List<Player>  winner = new ArrayList<>();
         for (int i = players.size() - 1; i >= 0; i--) {
             if (players.get(i).Get_shields() >= 7) {
                 winner.add(players.get(i));
-                output.println("The winner is: P" + players.get(i).Get_id());
-                output.flush();
+                System.out.println("The winner is: P" + players.get(i).Get_id());
+                System.out.flush();
             }
         }
         return winner;
     }
     public void startRound(Scanner scanner){
         while (determineWinner(output).isEmpty()) {
-            output.print("current player: " + players.get(current_player_round).Get_id());
+            System.out.print("current player: " + players.get(current_player_round).Get_id());
             Displaycard(players.get(current_player_round), output);
             draws_event_card(scanner);
             if (stage.length > 0) startQRound(scanner);
@@ -282,7 +283,7 @@ public class Main {
                 runQRound(scanner);
             }
             if (current_player != current_player_round) {
-                output.print("current player: " + players.get(current_player_round).Get_id());
+                System.out.print("current player: " + players.get(current_player_round).Get_id());
                 Displaycard(players.get(current_player_round),output);
                 Player currentPlayer = players.get(current_player_round);
                 System.out.println("P"+currentPlayer.Get_id() + ", please leave the hot seat. Press <return> to continue...");
@@ -309,35 +310,35 @@ public class Main {
     private void exit() {
         System.out.println("Exiting game...");
         scanner.close();
-        output.close();
+        System.out.close();
     }
     public void draws_event_card(Scanner scanner){
-        output.println();
-        Card event = event_deck.remove(event_deck.size()-1);
+        System.out.println();
+        Card event = event_deck.removeLast();
         if (event.getType().equals("E")) {
             if (event.getSuit().equals("Pl")) {
-                output.println("The current player has drawn an Plague card ");
+                System.out.println("The current player has drawn an Plague card ");
                 int shields = players.get(current_player_round).Get_shields();
                 if (shields >= 2) {
                     players.get(current_player_round).Set_shields(shields-2);
-                    output.println("The player "+ players.get(current_player_round).Get_id() +" draws this card immediately loses 2 \n" +
+                    System.out.println("The player "+ players.get(current_player_round).Get_id() +" draws this card immediately loses 2 \n" +
                             "shields");
                 }
-                output.flush();
+                System.out.flush();
             } else if (event.getSuit().equals("Qf")) {
-                output.println("The current player has drawn an Queen’s favor card");
+                System.out.println("The current player has drawn an Queen’s favor card");
                 distributeCards(players.get(current_player_round), 2);
                 removeCards(scanner, players.get(current_player_round));
             } else {
-                output.println("The current player has drawn an Prosperity card");
-                output.flush();
+                System.out.println("The current player has drawn an Prosperity card");
+                System.out.flush();
                 Player currentPlayer = players.get(current_player);
                 System.out.println("P"+currentPlayer.Get_id() + ", please leave the hot seat. Press <return> to continue...");
                 scanner.nextLine();
                 clearConsole();
                 for (Player player : players) {
                     current_player = player.Get_id() -1;
-                    output.print("current player: " + players.get(current_player).Get_id());
+                    System.out.print("current player: " + players.get(current_player).Get_id());
                     Displaycard(players.get(current_player),output);
                     distributeCards(player, 2);
                     removeCards(scanner, player);
@@ -347,12 +348,12 @@ public class Main {
                     clearConsole();
                 }
             }
-            played_eventCards.add(event);
         } else {
             int n = event.getValue();
             stage = new int[n];
         }
-        output.flush();
+        played_eventCards.add(event);
+        System.out.flush();
     }
     public void start_set_stage(Scanner scanner) {
         int round = 0;
@@ -362,17 +363,17 @@ public class Main {
                 break;
             }
         }
-        output.println("\n");
-        output.println("current player: " + players.get(sponsor).Get_id());
+        System.out.println("\n");
+        System.out.println("current player: " + players.get(sponsor).Get_id());
         current_player = sponsor;
         boolean done = true;
         List<Card> stage_card = new ArrayList<>();
         List<Card> stage_card_F = new ArrayList<>();
         while (done) {
-            output.println("stage : " + (round+1));
+            System.out.println("stage : " + (round+1));
             Displaycard(players.get(sponsor),output);
-            output.println("Enter the card you want to play (e.g. S(10)): ");
-            output.flush();
+            System.out.println("Enter the card you want to play (e.g. S(10)): ");
+            System.out.flush();
             String temp = scanner.nextLine();
             if (!temp.isEmpty() && Check_input_card(temp)){
                 String suit = temp.substring(0, 1);
@@ -383,23 +384,23 @@ public class Main {
                         if (stage_card_F.isEmpty()) {
                             stage_card_F.add(players.get(sponsor).getHand().get(c));
                         } else {
-                            output.println("Each stage must consist of a single Foe card \n");
+                            System.out.println("Each stage must consist of a single Foe card \n");
                         }
                     } else {
                         if (!stage_card.contains(players.get(sponsor).getHand().get(c))) {
                             stage_card.add(players.get(sponsor).getHand().get(c));
                         } else {
-                            output.println("non repeated weapon card \n");
+                            System.out.println("non repeated weapon card \n");
                         }
                     }
-                    output.println("The cards used for this stage: ");
+                    System.out.println("The cards used for this stage: ");
                     for (Card card : stage_card) {
-                        output.print(" "+ card.getSuit() + "(" + card.getValue() + ") ");
+                        System.out.print(" "+ card.getSuit() + "(" + card.getValue() + ") ");
                     }
-                    output.print(" "+ stage_card_F.get(0).getSuit() + "(" + stage_card_F.get(0).getValue() + ") ");
-                    output.flush();
-                } else output.println("Please enter the card you have \n");
-                output.flush();
+                    System.out.print(" "+ stage_card_F.getFirst().getSuit() + "(" + stage_card_F.getFirst().getValue() + ") ");
+                    System.out.flush();
+                } else System.out.println("Please enter the card you have \n");
+                System.out.flush();
             } else if (isInteger(temp)) {
                 int position = Integer.parseInt(temp);
                 if (position >= 1 && position <= players.get(sponsor).getHand().size()) {
@@ -408,68 +409,76 @@ public class Main {
                         if (stage_card_F.isEmpty()) {
                             stage_card_F.add(c);
                         } else {
-                            output.println("Each stage must consist of a single Foe card \n");
+                            System.out.println("Each stage must consist of a single Foe card \n");
                         }
                     } else {
                         if (!stage_card.contains(c)) {
                             stage_card.add(c);
                         } else {
-                            output.println("non repeated weapon card \n");
+                            System.out.println("non repeated weapon card \n");
                         }
                     }
                 } else {
-                    output.println("Invalid position. Please enter a valid card position.");
+                    System.out.println("Invalid position. Please enter a valid card position.");
                 }
-                output.println("The cards used for this stage: ");
+                System.out.println("The cards used for this stage: ");
                 for (Card card : stage_card) {
-                    output.print(" "+ card.getSuit() + "(" + card.getValue() + ") ");
+                    System.out.print(" "+ card.getSuit() + "(" + card.getValue() + ") ");
                 }
-                output.print(" "+ stage_card_F.get(0).getSuit() + "(" + stage_card_F.get(0).getValue() + ") ");
-                output.flush();
+                System.out.print(" "+ stage_card_F.getFirst().getSuit() + "(" + stage_card_F.getFirst().getValue() + ") ");
+                System.out.flush();
             } else if (temp.contains("Quit")) {
                 if (stage_card_F.isEmpty()) {
                     stage_card.clear();
-                    output.println("A stage cannot be empty \n");
+                    System.out.println("A stage cannot be empty \n");
                 }
                 else {
-                    int value = stage_card_F.get(0).getValue();
+                    int value = stage_card_F.getFirst().getValue();
                     for (Card card : stage_card) {
                         value += card.getValue();
                     }
                     if (round == 0) {
-                        output.println("The cards used for this stage: ");
+                        System.out.println("The cards used for this stage: ");
                         for (Card card : stage_card) {
-                            output.print(" "+ card.getSuit() + "(" + card.getValue() + ") ");
+                            System.out.print(" "+ card.getSuit() + "(" + card.getValue() + ") ");
                             playedCards.add(players.get(sponsor).playedCard(card.getSuit(), card.getValue()));
                         }
-                        output.print(" "+ stage_card_F.get(0).getSuit() + "(" + stage_card_F.get(0).getValue() + ") ");
-                        playedCards.add(players.get(sponsor).playedCard(stage_card_F.get(0).getSuit(),stage_card_F.get(0).getValue()));
+                        System.out.print(" "+ stage_card_F.getFirst().getSuit() + "(" + stage_card_F.getFirst().getValue() + ") ");
+                        playedCards.add(players.get(sponsor).playedCard(stage_card_F.getFirst().getSuit(),stage_card_F.getFirst().getValue()));
                         addcard += 1 + stage_card.size();
                         stage[round] = value;
                         done = false;
                     } else if (value > stage[round-1]) {
-                        output.println("The cards used for this stage: ");
+                        System.out.println("The cards used for this stage: ");
                         for (Card card : stage_card) {
-                            output.print(" "+ card.getSuit() + "(" + card.getValue() + ") ");
+                            System.out.print(" "+ card.getSuit() + "(" + card.getValue() + ") ");
                             playedCards.add(players.get(sponsor).playedCard(card.getSuit(), card.getValue()));
                         }
-                        output.print(" "+ stage_card_F.get(0).getSuit() + "(" + stage_card_F.get(0).getValue() + ") ");
-                        playedCards.add(players.get(sponsor).playedCard(stage_card_F.get(0).getSuit(),stage_card_F.get(0).getValue()));
+                        System.out.print(" "+ stage_card_F.getFirst().getSuit() + "(" + stage_card_F.getFirst().getValue() + ") ");
+                        playedCards.add(players.get(sponsor).playedCard(stage_card_F.getFirst().getSuit(),stage_card_F.getFirst().getValue()));
                         addcard += 1 + stage_card.size();
                         stage[round] = value;
                         done = false;
                     } else {
                         stage_card.clear();
                         stage_card_F.clear();
-                        output.println("Insufficient value for this stage \n");
+                        System.out.println("Insufficient value for this stage \n");
                     }
-                    output.println();
+                    System.out.println();
                 }
-                output.flush();
+                System.out.flush();
             } else {
-                output.println("Please enter according to the format again \n");
+                System.out.println("Please enter according to the format again \n");
             }
-            output.flush();
+            System.out.flush();
+        }
+        System.out.flush();
+        if (stage[stage.length-1] != 0) {
+            addcard += stage.length;
+            Player currentPlayer = players.get(current_player);
+            System.out.println("P"+currentPlayer.Get_id() + ", please leave the hot seat. Press <return> to continue...");
+            scanner.nextLine();
+            clearConsole();
         }
     }
     public int hasCard(Player player, String suit, int value) {
@@ -481,61 +490,77 @@ public class Main {
         return 1111;
 
     }
-    public void Get_sponsor(Scanner scanner){
-        for (int round = 0; round < players.size(); round++) {
-            output.println("current player: " + players.get(current_player).Get_id());
-            Displaycard(players.get(current_player),output);
-            output.println("\n The game has drawn a Q" + stage.length + " card");
-            output.flush();
-            if (checksponsor(players.get(current_player))) {
-                output.println("\n Do you want to sponsor the current task? Answer Y or N: ");
-                output.flush();
-                String playerans = scanner.nextLine();
-                if (playerans.contains("Y")) {
-                    output.println("P" + players.get(current_player).Get_id() + " is sponsor ");
-                    output.flush();
-                    sponsor = current_player;
-                    break;
-                }
-            } else {
-                output.println("\n player must NECESSARILY have cards that allow for the construction of a valid quest.");
-                output.flush();
-            }
-            if (sponsor == 100) {
-                Player currentPlayer = players.get(current_player);
-                System.out.println("P"+currentPlayer.Get_id() + ", please leave the hot seat. Press <return> to continue...");
-                scanner.nextLine();
-                clearConsole();
-                if (current_player < players.size()-1) current_player++;
-                else current_player = 0;
-            }
-
-        }
-    }
-
-    public void Get_Participants(Scanner scanner){
-        List<Player> remove_player = new ArrayList<>();
-        for (Player playersParticipant : players_Participants) {
-            current_player = playersParticipant.Get_id() - 1;
-            output.println("current player: " + players.get(current_player).Get_id());
-            Displaycard(players.get(current_player),output);
-            output.println("\n Do you want to join the current task? Answer Y: ");
-            output.flush();
+    public void Get_sponsor_ans(Scanner scanner){
+        System.out.println("current player: " + players.get(current_player).Get_id());
+        Displaycard(players.get(current_player),output);
+        System.out.println("\n The game has drawn a Q" + stage.length + " card");
+        System.out.flush();
+        if (checksponsor(players.get(current_player))) {
+            System.out.println("\n Do you want to sponsor the current task? Answer Y or N: ");
+            System.out.flush();
             String playerans = scanner.nextLine();
-            if (playerans.equals("Y")) {
-                distributeCards(players.get(current_player), 1);
-                removeCards(scanner, players.get(current_player));
-                Displaycard(players.get(current_player),output);
-            } else {
-                remove_player.add(players.get(current_player));
+            if (playerans.contains("Y")) {
+                System.out.println("P" + players.get(current_player).Get_id() + " is sponsor ");
+                System.out.flush();
+                sponsor = current_player;
             }
+        } else {
+            System.out.println("\n player must NECESSARILY have cards that allow for the construction of a valid quest.");
+            System.out.flush();
+        }
+        if (sponsor == 100) {
             Player currentPlayer = players.get(current_player);
-            System.out.println("P" + currentPlayer.Get_id() + ", please leave the hot seat. Press <return> to continue...");
+            System.out.println("P"+currentPlayer.Get_id() + ", please leave the hot seat. Press <return> to continue...");
             scanner.nextLine();
             clearConsole();
+            if (current_player < players.size()-1) current_player++;
+            else current_player = 0;
         }
-        players_Participants.removeAll(remove_player);
-        if (!players_Participants.isEmpty()) current_player = players_Participants.get(0).Get_id()-1;
+    }
+    public void Get_sponsor(Scanner scanner){
+        for (int round = 0; round < players.size(); round++) {
+            Get_sponsor_ans(scanner);
+            if (sponsor != 100) break;
+        }
+    }
+    public void Get_Participants_ans(Scanner scanner) {
+        int next_players = current_player;
+        for (int i = 0; i < players_Participants.size(); i++) {
+            if (next_players == players_Participants.getLast().Get_id()-1) {
+                next_players = players_Participants.getFirst().Get_id() -1;
+                break;
+            } else if (next_players == players_Participants.get(i).Get_id() -1) {
+                next_players = players_Participants.get(i+1).Get_id() -1;
+                break;
+            }
+        }
+        System.out.println("current player: " + players.get(current_player).Get_id());
+        Displaycard(players.get(current_player),output);
+        System.out.println("\n Do you want to join the current task? Answer Y: ");
+        System.out.flush();
+        String playerans = scanner.nextLine();
+        if (playerans.equals("Y")) {
+            distributeCards(players.get(current_player), 1);
+            removeCards(scanner, players.get(current_player));
+            Displaycard(players.get(current_player),output);
+        } else {
+            players_Participants.remove(players.get(current_player));
+        }
+
+        Player currentPlayer = players.get(current_player);
+        System.out.println("P" + currentPlayer.Get_id() + ", please leave the hot seat. Press <return> to continue...");
+        scanner.nextLine();
+        clearConsole();
+        System.out.flush();
+        current_player = next_players;
+
+    }
+    public void Get_Participants(Scanner scanner){
+        int num = players_Participants.size();
+        for (int i = 0; i < num; i++) {
+            Get_Participants_ans(scanner);
+        }
+        if (!players_Participants.isEmpty()) current_player = players_Participants.getFirst().Get_id()-1;
     }
     public boolean checksponsor(Player player) {
         if (player.getHand().size() < stage.length) return false;
@@ -557,73 +582,73 @@ public class Main {
         }
         int next_players = current_player;
         for (int i = 0; i < players_Participants.size(); i++) {
-            if (next_players == players_Participants.get(players_Participants.size()-1).Get_id()-1) {
-                next_players = players_Participants.get(0).Get_id() -1;
+            if (next_players == players_Participants.getLast().Get_id()-1) {
+                next_players = players_Participants.getFirst().Get_id() -1;
                 break;
             } else if (next_players == players_Participants.get(i).Get_id() -1) {
                 next_players = players_Participants.get(i+1).Get_id() -1;
                 break;
             }
         }
-        output.println("current player: " + players.get(current_player).Get_id());
+        System.out.println("current player: " + players.get(current_player).Get_id());
         boolean done = true;
         while (done) {
             Displaycard(players.get(current_player),output);
-            output.println();
-            output.println("stage : " + (round+1));
-            output.print(" Enter the card you want to play (e.g. S(10)): ");
-            output.flush();
+            System.out.println();
+            System.out.println("stage : " + (round+1));
+            System.out.print(" Enter the card you want to play (e.g. S(10)): ");
+            System.out.flush();
             String temp = scanner.nextLine();
             if (!temp.isEmpty() && Check_input_card(temp)){
                 String suit = temp.substring(0, 1);
                 int value = Integer.parseInt(temp.substring(temp.indexOf("(") + 1, temp.indexOf(")")));
                 int c = hasCard(players.get(current_player),suit,value);
                 if (c != 100) {
-                    if (suit.equals("F")) output.println("Please enter the weapon card you have \n");
+                    if (suit.equals("F")) System.out.println("Please enter the weapon card you have \n");
                     else {
                         if (!players.get(current_player).getAttackValueDeck().contains(players.get(current_player).getHand().get(c))) {
                             players.get(current_player).addToAttackValueDeck(players.get(current_player).getHand().get(c));
-                            output.println(" "+ suit + "(" + value + ") ");
+                            System.out.println(suit + "(" + value + ") ");
                         } else {
-                            output.println(" "+ suit + "(" + value + ") ");
-                            output.println("non repeated weapon card \n");
+                            System.out.println(suit + "(" + value + ") ");
+                            System.out.println("non repeated weapon card \n");
                         }
                     }
-                } else output.println("Please enter the card you have \n");
-                output.print("\n The value of the cards used in this stage is "+ players.get(current_player).calculateAttackValue() + " : ");
+                } else System.out.println("Please enter the card you have \n");
+                System.out.print("\n The value of the cards used in this stage is "+ players.get(current_player).calculateAttackValue() + " : ");
                 for (Card card : players.get(current_player).getAttackValueDeck()) {
-                    output.print(" "+ card.getSuit() + "(" + card.getValue() + ") ");
+                    System.out.print(card.getSuit() + "(" + card.getValue() + ") ");
                 }
-                output.flush();
+                System.out.flush();
             } else if (isInteger(temp)) {
                 int position = Integer.parseInt(temp);
                 if (position >= 1 && position <= players.get(current_player).getHand().size()) {
                     Card c = players.get(current_player).getHand().get(position - 1);
                     if (c.getSuit().equals("F")) {
-                        output.println("Please enter the weapon card you have \n");
+                        System.out.println("Please enter the weapon card you have \n");
                     } else {
                         if (!players.get(current_player).getAttackValueDeck().contains(c)) {
                             players.get(current_player).addToAttackValueDeck(c);
-                            output.println(" "+ c.getSuit() + "(" + c.getValue() + ") ");
+                            System.out.println(c.getSuit() + "(" + c.getValue() + ") ");
                         } else {
-                            output.println("non repeated weapon card \n");
+                            System.out.println("non repeated weapon card \n");
                         }
                     }
                 }
-                output.print("\n The value of the cards used in this stage is "+ players.get(current_player).calculateAttackValue() + " : ");
+                System.out.print("\n The value of the cards used in this stage is "+ players.get(current_player).calculateAttackValue() + " : ");
                 for (Card card : players.get(current_player).getAttackValueDeck()) {
-                    output.print(" "+ card.getSuit() + "(" + card.getValue() + ") ");
+                    System.out.print(card.getSuit() + "(" + card.getValue() + ") ");
                 }
-                output.flush();
+                System.out.flush();
             } else if (temp.contains("Quit")) {
                 int value = stage[round];
-                if (current_player == players_Participants.get(players_Participants.size()-1).Get_id() -1) {
+                if (current_player == players_Participants.getLast().Get_id() -1) {
                     stage[round] = 0;
                 }
                 if (!players.get(current_player).getAttackValueDeck().isEmpty()) {
-                    output.print("\n The value of the cards used in this stage is "+ players.get(current_player).calculateAttackValue() + " : ");
+                    System.out.print("\n The value of the cards used in this stage is "+ players.get(current_player).calculateAttackValue() + " : ");
                     for (Card card : players.get(current_player).getAttackValueDeck()) {
-                        output.print(" "+ card.getSuit() + "(" + card.getValue() + ") ");
+                        System.out.print(card.getSuit() + "(" + card.getValue() + ") ");
                         playedCards.add(players.get(current_player).playedCard(card.getSuit(), card.getValue()));
                     }
                     if (players.get(current_player).calculateAttackValue() >= value) {
@@ -632,23 +657,23 @@ public class Main {
                             players.get(current_player).Set_shields(shields + stage.length);
                             players_Participants.remove(players.get(current_player));
                         }
-                        output.println("\n current stage win \n");
+                        System.out.println("\n current stage win \n");
                     } else {
                         players_Participants.remove(players.get(current_player));
-                        output.println("\n current stage fail \n");
+                        System.out.println("\n current stage fail \n");
                     }
                 } else {
                     players_Participants.remove(players.get(current_player));
-                    output.println("empty set of non repeated weapon cards \n");
+                    System.out.println("empty set of non repeated weapon cards \n");
                 }
 
-                output.flush();
+                System.out.flush();
                 players.get(current_player).cleanAttackValueDeck();
                 done = false;
             } else {
-                output.println("Please enter according to the format again \n");
+                System.out.println("Please enter according to the format again \n");
             }
-            output.flush();
+            System.out.flush();
         }
         if (current_player != next_players || players_Participants.isEmpty()) {
             Player currentPlayer = players.get(current_player);
@@ -658,19 +683,21 @@ public class Main {
         }
         current_player = next_players;
     }
+    public void setParticipants() {
+        players_Participants.addAll(players);
+        players_Participants.remove(players.get(sponsor));
+        current_player = players_Participants.getFirst().id-1;
+    }
+    public void set_stage(Scanner scanner) {
+        for (int round = 0; round < stage.length; round++) {
+            start_set_stage(scanner);
+        }
+        setParticipants();
+    }
     public void startQRound(Scanner scanner){
         Get_sponsor(scanner);
         if (sponsor != 100) {
-            for (int round = 0; round < stage.length; round++) {
-                start_set_stage(scanner);
-            }
-            players_Participants.addAll(players);
-            players_Participants.remove(players.get(sponsor));
-            addcard += stage.length;
-            Player currentPlayer = players.get(current_player);
-            System.out.println("P"+currentPlayer.Get_id() + ", please leave the hot seat. Press <return> to continue...");
-            scanner.nextLine();
-            clearConsole();
+            set_stage(scanner);
         } else {
             stage = new int[0];
         }
@@ -694,7 +721,7 @@ public class Main {
 
         distributeCards(players.get(sponsor), addcard);
         if (players.get(sponsor).getHand().size() > 12) {
-            output.println("current player: " + players.get(sponsor).Get_id());
+            System.out.println("current player: " + players.get(sponsor).Get_id());
             removeCards(scanner, players.get(sponsor));
         }
         stage = new int[0];
@@ -704,7 +731,7 @@ public class Main {
 
     public void removeCards(Scanner scanner, Player player){
         while (player.getHand().size() > 12) {
-            output.println("Player "+player.Get_id() +" need remove "+ (player.getHand().size() - 12) + " Cards");
+            System.out.println("Player "+player.Get_id() +" need remove "+ (player.getHand().size() - 12) + " Cards");
             playCard(scanner, player);
         }
     }
